[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "two_sum"
path = "src/bin/two_sum.rs"

[[bin]]
name = "add_two_numbers"
path = "src/bin/add_two_numbers.rs"

[[bin]]
name = "substring_without_repeating"
path = "src/bin/substring_without_repeating.rs"

[[bin]]
name = "median_of_two_sorted_arrays"
path = "src/bin/median_of_two_sorted_arrays.rs"

[[bin]]
name = "longest_common_prefix"
path = "src/bin/longest_common_prefix.rs"

[[bin]]
name = "valid_parenthesis"
path = "src/bin/valid_parenthesis.rs"

[[bin]]
name = "merge_two_sorted_lists"
path = "src/bin/merge_two_sorted_lists.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array"
path = "src/bin/remove_duplicates_from_sorted_array.rs"

[[bin]]
name = "remove_element"
path = "src/bin/remove_element.rs"

[[bin]]
name = "find_index_fist_occurrence_string"
path = "src/bin/find_index_fist_occurrence_string.rs"

[[bin]]
name = "search_insert_position"
path = "src/bin/search_insert_position.rs"

[[bin]]
name = "length_of_last_word"
path = "src/bin/length_of_last_word.rs"

[[bin]]
name = "plus_one"
path = "src/bin/plus_one.rs"

[[bin]]
name = "add_binary"
path = "src/bin/add_binary.rs"
