[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "two_sum"
path = "src/bin/two_sum.rs"

[[bin]]
name = "add_two_numbers"
path = "src/bin/add_two_numbers.rs"

[[bin]]
name = "substring_without_repeating"
path = "src/bin/substring_without_repeating.rs"

[[bin]]
name = "median_of_two_sorted_arrays"
path = "src/bin/median_of_two_sorted_arrays.rs"

[[bin]]
name = "longest_common_prefix"
path = "src/bin/longest_common_prefix.rs"

[[bin]]
name = "valid_parenthesis"
path = "src/bin/valid_parenthesis.rs"

[[bin]]
name = "merge_two_sorted_lists"
path = "src/bin/merge_two_sorted_lists.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array"
path = "src/bin/remove_duplicates_from_sorted_array.rs"

[[bin]]
name = "remove_element"
path = "src/bin/remove_element.rs"

[[bin]]
name = "find_index_fist_occurrence_string"
path = "src/bin/find_index_fist_occurrence_string.rs"

[[bin]]
name = "search_insert_position"
path = "src/bin/search_insert_position.rs"

[[bin]]
name = "length_of_last_word"
path = "src/bin/length_of_last_word.rs"

[[bin]]
name = "plus_one"
path = "src/bin/plus_one.rs"

[[bin]]
name = "add_binary"
path = "src/bin/add_binary.rs"

[[bin]]
name = "longest_palindromic_substring"
path = "src/bin/longest_palindromic_substring.rs"

[[bin]]
name = "zigzag_conversion"
path = "src/bin/zigzag_conversion.rs"

[[bin]]
name = "reverse_integer"
path = "src/bin/reverse_integer.rs"

[[bin]]
name = "string_to_integer"
path = "src/bin/string_to_integer.rs"

[[bin]]
name = "palindrome_number"
path = "src/bin/palindrome_number.rs"

[[bin]]
name = "container_with_most_water"
path = "src/bin/container_with_most_water.rs"

[[bin]]
name = "three_sum"
path = "src/bin/three_sum.rs"

[[bin]]
name = "letter_combination_phone_number"
path = "src/bin/letter_combination_phone_number.rs"

[[bin]]
name = "climbing_stairs"
path = "src/bin/climbing_stairs.rs"

[[bin]]
name = "simplify_path"
path = "src/bin/simplify_path.rs"

[[bin]]
name = "set_matrix_zeroes"
path = "src/bin/set_matrix_zeroes.rs"

[[bin]]
name = "search_2d_matrix"
path = "src/bin/search_2d_matrix.rs"

[[bin]]
name = "generate_parentheses"
path = "src/bin/generate_parentheses.rs"

[[bin]]
name = "merge_k_sorted_lists"
path = "src/bin/merge_k_sorted_lists.rs"

[[bin]]
name = "swap_nodes_in_pairs"
path = "src/bin/swap_nodes_in_pairs.rs"
