[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "two_sum"
path = "src/bin/two_sum.rs"

[[bin]]
name = "add_two_numbers"
path = "src/bin/add_two_numbers.rs"

[[bin]]
name = "substring_without_repeating"
path = "src/bin/substring_without_repeating.rs"

[[bin]]
name = "median_of_two_sorted_arrays"
path = "src/bin/median_of_two_sorted_arrays.rs"

[[bin]]
name = "longest_common_prefix"
path = "src/bin/longest_common_prefix.rs"

[[bin]]
name = "valid_parenthesis"
path = "src/bin/valid_parenthesis.rs"

[[bin]]
name = "merge_two_sorted_lists"
path = "src/bin/merge_two_sorted_lists.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array"
path = "src/bin/remove_duplicates_from_sorted_array.rs"

[[bin]]
name = "remove_element"
path = "src/bin/remove_element.rs"

[[bin]]
name = "find_index_fist_occurrence_string"
path = "src/bin/find_index_fist_occurrence_string.rs"

[[bin]]
name = "search_insert_position"
path = "src/bin/search_insert_position.rs"

[[bin]]
name = "length_of_last_word"
path = "src/bin/length_of_last_word.rs"

[[bin]]
name = "plus_one"
path = "src/bin/plus_one.rs"

[[bin]]
name = "add_binary"
path = "src/bin/add_binary.rs"

[[bin]]
name = "longest_palindromic_substring"
path = "src/bin/longest_palindromic_substring.rs"

[[bin]]
name = "zigzag_conversion"
path = "src/bin/zigzag_conversion.rs"

[[bin]]
name = "reverse_integer"
path = "src/bin/reverse_integer.rs"

[[bin]]
name = "string_to_integer"
path = "src/bin/string_to_integer.rs"

[[bin]]
name = "palindrome_number"
path = "src/bin/palindrome_number.rs"

[[bin]]
name = "container_with_most_water"
path = "src/bin/container_with_most_water.rs"

[[bin]]
name = "three_sum"
path = "src/bin/three_sum.rs"

[[bin]]
name = "letter_combination_phone_number"
path = "src/bin/letter_combination_phone_number.rs"

[[bin]]
name = "climbing_stairs"
path = "src/bin/climbing_stairs.rs"

[[bin]]
name = "simplify_path"
path = "src/bin/simplify_path.rs"

[[bin]]
name = "set_matrix_zeroes"
path = "src/bin/set_matrix_zeroes.rs"

[[bin]]
name = "search_2d_matrix"
path = "src/bin/search_2d_matrix.rs"

[[bin]]
name = "generate_parentheses"
path = "src/bin/generate_parentheses.rs"

[[bin]]
name = "merge_k_sorted_lists"
path = "src/bin/merge_k_sorted_lists.rs"

[[bin]]
name = "swap_nodes_in_pairs"
path = "src/bin/swap_nodes_in_pairs.rs"

[[bin]]
name = "reverse_nodes_in_k_group"
path = "src/bin/reverse_nodes_in_k_group.rs"

[[bin]]
name = "word_subsets"
path = "src/bin/word_subsets.rs"

[[bin]]
name = "reverse_only_letters"
path = "src/bin/reverse_only_letters.rs"

[[bin]]
name = "maximum_sum_circular_subarray"
path = "src/bin/maximum_sum_circular_subarray.rs"

[[bin]]
name = "delete_node_from_linked_list_present_in_array"
path = "src/bin/delete_node_from_linked_list_present_in_array.rs"

[[bin]]
name = "minimum_cost_cutting_cake"
path = "src/bin/minimum_cost_cutting_cake.rs"

[[bin]]
name = "find_winning_player"
path = "src/bin/find_winning_player.rs"

[[bin]]
name = "number_of_bit_changes"
path = "src/bin/number_of_bit_changes.rs"

[[bin]]
name = "find_if_digit_game_can_be_won"
path = "src/bin/find_if_digit_game_can_be_won.rs"

[[bin]]
name = "sqrtx"
path = "src/bin/sqrtx.rs"

[[bin]]
name = "remove_duplicates_from_sorted_list"
path = "src/bin/remove_duplicates_from_sorted_list.rs"

[[bin]]
name = "construct_rectangle"
path = "src/bin/construct_rectangle.rs"

[[bin]]
name = "merge_sorted_array"
path = "src/bin/merge_sorted_array.rs"

[[bin]]
name = "pascals_triangle"
path = "src/bin/pascals_triangle.rs"

[[bin]]
name = "pascals_triangle2"
path = "src/bin/pascals_triangle2.rs"

[[bin]]
name = "best_time_buy_sell_stock"
path = "src/bin/best_time_buy_sell_stock.rs"

[[bin]]
name = "valid_palindrome"
path = "src/bin/valid_palindrome.rs"

[[bin]]
name = "single_number"
path = "src/bin/single_number.rs"

[[bin]]
name = "excel_sheet_column_number"
path = "src/bin/excel_sheet_column_number.rs"
